# htc_vive_tracker_ros

./: CMakeLists.txt  Readme.md  package.xml
cfg/: HtcViveTracker.cfg  aligned_tf_poses_tracker.csv  aligned_tf_poses_wam.csv  calibration.cpp  calibration.json  calibration.xml  calibrationBaseWorld.json  calibrationBaseWorld.txt  calibrationBaseWorldMatlab.json  calibrationHandEyeMatlab.json  json_to_xml.py
include/: file_reader.h  hand_eye_calibration_helper.h  htc_vive_tracker_alg.h  htc_vive_tracker_alg_node.h
launch/: htc_vive_main.launch  publish_handeye_link.launch  publish_wam_chaperone_link.launch  wam_follow_device.launch  wam_follow_tracker.launch
params/: ekf_htcvive.yaml
src/: file_reader.cpp  hand_eye_calibration_helper.cpp  htc_vive_tracker_alg.cpp  htc_vive_tracker_alg_node.cpp
srv/: GetButtonPressed.srv  TriggerHapticPulse.srv
